[package]
name = "sani-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
anyhow = "*"
chrono = "*"
exitcode = "*"
fork = "*"
interprocess = "*"
itertools = "0.10.5"
lazy_static = "*"
nix = "*"
regex = "*"
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
signal-hook = "*"
walkdir = "*"
