[package]
name = "sani-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
anyhow = "*"
chrono = "*"
exitcode = "*"
itertools = "0.10.5"
lazy_static = "*"
regex = "*"
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
walkdir = "*"
