[package]
name = "sani-desu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
anyhow = "1.0.75"
exitcode = "1.1.2"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
anime-database-lib = { git = "https://github.com/Player01osu/anime-database-lib" }
